Implement security hardening in blog.html
Added various security headers to enhance protection against common vulnerabilities.

--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,39 @@
   <meta name="twitter:description" content="Practical overview of cryptography and how Sectigo SSL certificates deliver trust and security for businesses." />
   <meta name="twitter:image" content="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" />
 
+  <!-- ================= Security Hardening ================= -->
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="X-Frame-Options" content="DENY">
+<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+<meta http-equiv="X-DNS-Prefetch-Control" content="off">
+<meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
+<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="X-XSS-Protection" content="1; mode=block">
+
+<meta http-equiv="Permissions-Policy" content="
+  geolocation=(),
+  camera=(),
+  microphone=(),
+  payment=(),
+  usb=()
+">
+
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to;
+  style-src 'self' 'unsafe-inline';
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com;
+  frame-src https://embed.tawk.to;
+  connect-src 'self';
+  font-src 'self';
+  object-src 'none';
+  base-uri 'self';
+  form-action 'self';
+  frame-ancestors 'none';
+">
+<!-- ======================================================= -->
+
   <style>
     :root{
       --accent:#0b54c9;
